tests/paczka1/small_fuzzy/34034345.err
Error in line 4: S277 S277 55,1
Error in line 10: mqO5XWYC46 S444 41,0
Error in line 1: E0jnap S444 24,6
Error in line 14: E0jnap S277 38,8
Error in line 15: E0jnap S444 76,5
